--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,11 @@ version: '3'
 services:
   db:
     container_name: db
-    image: mongo
+    image: mongo:latest
     ports:
     - "27017:27017"
     volumes:
     - ./Volume:/Volume
-    network_mode: "host"
-    healthcheck:
-      test: echo 'db.runCommand({serverStatus:1}).ok' | mongo admin -u $MONGO_INITDB_ROOT_USERNAME -p $MONGO_INITDB_ROOT_PASSWORD --quiet | grep 1
-      timeout: 20s
-      retries: 10
 
   spring-server:
     container_name: spring
@@ -25,7 +20,6 @@ services:
     - db
     ports:
     - "8000:8080"
-    command: bash -c "sh run.sh"
 
   flask-server:
     container_name: flask
@@ -34,5 +28,7 @@ services:
       dockerfile: Dockerfile
     image: ai-server
     network_mode: "service:spring-server"
+    depends_on:
+    - db
 
 
