--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,10 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij
+Ai-Model/English-Predict/modules/.ipynb_checkpoints/
+
+Ai-Model/English-Predict/test_img/
+
+Ai-Model/init
+
+Ai-Model/English-Predict/modules/__pycache__/dataset.cpython-37.pyc
