--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     build: 
       context: ./Web-Server
       dockerfile: Dockerfile
-    image: web-server
+    image: mses1572/web-server
     depends_on:
     - db
     links:
@@ -26,7 +26,7 @@ services:
     build: 
       context: ./Ai-Server
       dockerfile: Dockerfile
-    image: ai-server
+    image: mses1572/ai-server
     network_mode: "service:spring-server"
     depends_on:
     - db
